--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                                     </svg>
                                 </button>
-                                <h2 class="text-xl sm:text-2xl font-bold text-white">SUN APP STORE</h2>
+                                <h2 class="text-xl sm:text-2xl font-bold text-white">TZPROAPKS</h2>
                                 <div class="w-7"></div>
                             </div>
                         </div>
