--- a/index.html
+++ b/index.html
@@ -1587,5 +1587,6 @@
         window.showUpdateForm = showUpdateForm;
         window.handleUpdate = handleUpdate;
     </script>
+    <script type='text/javascript' src='//pl26555628.profitableratecpm.com/24/fd/27/24fd2780561359f03116aea7ec6299f6.js'></script>
 </body>
 </html>
